--- a/src/app/features/dried/components/close-lot-form/close-lot-form.component.html
+++ b/src/app/features/dried/components/close-lot-form/close-lot-form.component.html
@@ -3,8 +3,14 @@
     <ion-row>
       <ion-item class="form-input">
         <ion-label class="ion-label" position="floating">Producto*</ion-label>
-        <ion-select style="--placeholder: black; --placeholder-opacity: 0.9;" placeholder="Ingresa lote"
-          interface="action-sheet" (ionChange)="selectProduct($event)" [disabled]="disabled(products)">
+        <ion-select
+          style="--placeholder: black; --placeholder-opacity: 0.9"
+          placeholder="Seleccione un producto"
+          interface="action-sheet"
+          (ionChange)="selectProduct($event)"
+          [disabled]="disabled(products)"
+          formControlName="productId"
+        >
           <ng-container *ngFor="let product of products">
             <ion-select-option [value]="product">
               {{ product.product }}
@@ -14,10 +20,12 @@
       </ion-item>
     </ion-row>
     <div class="error">
-      <ion-label *ngIf="
-          form.hasError('required', 'loteId') &&
-          (form.controls.loteId.touched || form.controls.loteId.dirty)
-        ">
+      <ion-label
+        *ngIf="
+          form.hasError('required', 'productId') &&
+          (form.controls.productId.touched || form.controls.productId.dirty)
+        "
+      >
         Este campo es requerido.
       </ion-label>
     </div>
@@ -25,8 +33,13 @@
       <ion-item class="form-input">
         <ion-label class="ion-label" position="floating">Lote*</ion-label>
 
-        <ion-select placeholder="Seleccione un producto*" (ionChange)="onChangeLot($event)" interface="action-sheet"
-          [disabled]="disabled(lots)">
+        <ion-select
+          placeholder="Seleccione un lote"
+          (ionChange)="onChangeLot($event)"
+          interface="action-sheet"
+          [disabled]="disabled(lots)"
+          formControlName="loteId"
+        >
           <ng-container *ngFor="let lot of lots">
             <ion-select-option [value]="lot">
               {{ lot.lot }}
@@ -36,18 +49,27 @@
       </ion-item>
     </ion-row>
     <div class="error">
-      <ion-label *ngIf="
-          form.hasError('required', 'productId') &&
-          (form.controls.productId.touched || form.controls.productId.dirty)
-        ">
+      <ion-label
+        *ngIf="
+          form.hasError('required', 'loteId') &&
+          (form.controls.loteId.touched || form.controls.loteId.dirty)
+        "
+      >
         Este campo es requerido.
       </ion-label>
     </div>
 
     <ion-row>
       <ion-item class="form-input">
-        <ion-label class="ion-label" position="floating">Fecha de apertura</ion-label>
-        <ion-datetime formControlName="date" placeholder="dd/mm/yyyy" displayFormat="DD/MM/YYYY" readonly>
+        <ion-label class="ion-label" position="floating"
+          >Fecha de apertura</ion-label
+        >
+        <ion-datetime
+          formControlName="date"
+          placeholder="dd/mm/yyyy"
+          displayFormat="DD/MM/YYYY"
+          readonly
+        >
         </ion-datetime>
       </ion-item>
     </ion-row>
