--- a/src/app/features/dried/components/open-lot-form/open-lot-form.component.html
+++ b/src/app/features/dried/components/open-lot-form/open-lot-form.component.html
@@ -4,8 +4,14 @@
       <ion-item class="form-input">
         <ion-label class="ion-label" position="floating">Producto*</ion-label>
 
-        <ion-select placeholder="Ingresa lote" style="--placeholder-color: black; --placeholder-opacity: 0.9;"
-          (ionChange)="selectProduct($event)" interface="action-sheet" [disabled]="disabled(products)">
+        <ion-select
+          placeholder="Seleccione un producto"
+          style="--placeholder-color: black; --placeholder-opacity: 0.9"
+          (ionChange)="selectProduct($event)"
+          interface="action-sheet"
+          [disabled]="disabled(products)"
+          formControlName="productId"
+        >
           <ng-container *ngFor="let product of products">
             <ion-select-option [value]="product">
               {{ product.product }}
@@ -15,10 +21,12 @@
       </ion-item>
     </ion-row>
     <div class="error">
-      <ion-label *ngIf="
+      <ion-label
+        *ngIf="
           form.hasError('required', 'productId') &&
-          (form.controls.loteId.touched || form.controls.loteId.dirty)
-        ">
+          (form.controls.productId.touched || form.controls.productId.dirty)
+        "
+      >
         Este campo es requerido.
       </ion-label>
     </div>
@@ -26,8 +34,13 @@
       <ion-item class="form-input">
         <ion-label class="ion-label" position="floating">Lote*</ion-label>
 
-        <ion-select placeholder="Seleccione un producto" interface="action-sheet" (ionChange)="onChangeLot($event)"
-          [disabled]="disabled(lots)">
+        <ion-select
+          placeholder="Seleccione un lote"
+          interface="action-sheet"
+          (ionChange)="onChangeLot($event)"
+          [disabled]="disabled(lots)"
+          formControlName="loteId"
+        >
           <ng-container *ngFor="let lot of lots">
             <ion-select-option [value]="lot">
               {{ lot.lot }}
@@ -37,18 +50,27 @@
       </ion-item>
     </ion-row>
     <div class="error">
-      <ion-label *ngIf="
+      <ion-label
+        *ngIf="
           form.hasError('required', 'loteId') &&
-          (form.controls.productId.touched || form.controls.productId.dirty)
-        ">
+          (form.controls.loteId.touched || form.controls.loteId.dirty)
+        "
+      >
         Este campo es requerido.
       </ion-label>
     </div>
 
     <ion-row>
       <ion-item class="form-input">
-        <ion-label class="ion-label" position="floating">Fecha de apertura</ion-label>
-        <ion-datetime formControlName="date" placeholder="dd/mm/yyyy" displayFormat="DD/MM/YYYY" readonly>
+        <ion-label class="ion-label" position="floating"
+          >Fecha de apertura</ion-label
+        >
+        <ion-datetime
+          formControlName="date"
+          placeholder="dd/mm/yyyy"
+          displayFormat="DD/MM/YYYY"
+          readonly
+        >
         </ion-datetime>
       </ion-item>
     </ion-row>
