--- a/src/global.scss
+++ b/src/global.scss
@@ -37,6 +37,8 @@ $color-text-secondary: #dbdbdb;
   padding: 0;
   font-size: 14px;
   font-family: "Montserrat", sans-serif;
+  --placeholder-color: black;
+  --placeholder-opacity: 0.9;
 }
 
 .modal-size {
