--- a/src/app/features/packaging/pages/open-lot/open-lot.page.html
+++ b/src/app/features/packaging/pages/open-lot/open-lot.page.html
@@ -5,25 +5,40 @@
     <ion-row>
       <ion-item>
         <ion-label position="floating">Producto*</ion-label>
-        <ion-select class="item-form" interface="action-sheet" placeholder="Seleccione un producto"
-          (ionChange)="selectLot($event)" [disabled]="products.length == 0">
+        <ion-select
+          class="item-form"
+          interface="action-sheet"
+          placeholder="Seleccione un producto"
+          (ionChange)="selectLot($event)"
+          [disabled]="products.length == 0"
+          formControlName="product"
+        >
           <ng-container *ngFor="let product of products">
-            <ion-select-option [value]="product"> {{product.product}}</ion-select-option>
+            <ion-select-option [value]="product">
+              {{product.product}}</ion-select-option
+            >
           </ng-container>
         </ion-select>
       </ion-item>
     </ion-row>
     <div class="error">
-      <ion-label *ngIf="lotForm.hasError('required', 'productId') &&
-      (lotForm.controls.serie.touched || lotForm.controls.serie.dirty)">
+      <ion-label
+        *ngIf="lotForm.hasError('required', 'product') &&
+      (lotForm.controls.product.touched || lotForm.controls.product.dirty)"
+      >
         Seleccione un producto
       </ion-label>
     </div>
     <ion-row>
       <ion-item>
         <ion-label position="floating">Lote de proveedor*</ion-label>
-        <ion-select class="item-form" interface="action-sheet" placeholder="Seleccione un producto"
-          formControlName="serie" [disabled]="lots.length == 0">
+        <ion-select
+          class="item-form"
+          interface="action-sheet"
+          placeholder="Seleccione un lote"
+          formControlName="serie"
+          [disabled]="lots.length == 0"
+        >
           <ng-container *ngFor="let lot of lots">
             <ion-select-option [value]="lot">{{lot.lot}}</ion-select-option>
           </ng-container>
@@ -31,22 +46,27 @@
       </ion-item>
     </ion-row>
     <div class="error">
-      <ion-label *ngIf="lotForm.hasError('required', 'serie') &&
-      (lotForm.controls.serie.touched || lotForm.controls.serie.dirty)">
+      <ion-label
+        *ngIf="lotForm.hasError('required', 'serie') &&
+      (lotForm.controls.serie.touched || lotForm.controls.serie.dirty)"
+      >
         Seleccione un lote
       </ion-label>
     </div>
     <ion-row>
       <ion-item>
         <ion-label position="floating">Fecha de apertura*</ion-label>
-        <ion-datetime class="item-form" placeholder="Ingresar fecha" displayFormat="MM/DD/YYYY" formControlName="date"
-          disabled></ion-datetime>
+        <ion-datetime
+          class="item-form"
+          placeholder="Ingresar fecha"
+          displayFormat="MM/DD/YYYY"
+          formControlName="date"
+          disabled
+        ></ion-datetime>
       </ion-item>
     </ion-row>
     <div class="error">
-      <ion-label *ngIf="date.errors">
-        Seleccione una fecha
-      </ion-label>
+      <ion-label *ngIf="date.errors"> Seleccione una fecha </ion-label>
     </div>
   </form>
   <ion-grid class="footer-container">
@@ -56,7 +76,11 @@
       </ion-col>
     </ion-row>
     <ion-row class="row-button">
-      <ion-button (click)="requestOpenLote()" [disabled]="lotForm.invalid" class="button">
+      <ion-button
+        (click)="requestOpenLote()"
+        [disabled]="lotForm.invalid"
+        class="button"
+      >
         <ion-grid>
           <ion-col *ngIf="!loading" size="12">Abrir lote</ion-col>
           <ion-spinner *ngIf="loading" name="crescent"></ion-spinner>
