Cambio en parametros de servicios

--- a/src/app/features/dried/components/close-lot-form/close-lot-form.component.html
+++ b/src/app/features/dried/components/close-lot-form/close-lot-form.component.html
@@ -37,7 +37,7 @@
           placeholder="Seleccione un lote"
           (ionChange)="onChangeLot($event)"
           interface="action-sheet"
-          [disabled]="disabled(lots)"
+          [disabled]="!product.value"
           formControlName="loteId"
         >
           <ng-container *ngFor="let lot of lots">
