--- a/src/app/features/dried/components/exit-lot-form/exit-lot-form.component.html
+++ b/src/app/features/dried/components/exit-lot-form/exit-lot-form.component.html
@@ -45,7 +45,7 @@
         >
           <ng-container *ngFor="let lot of lots">
             <ion-select-option [value]="lot.lot">
-              {{ lot.lot }}
+              Lote: {{ lot.lot}} Apertura: {{lot.openingDate}}
             </ion-select-option>
           </ng-container>
         </ion-select>
