--- a/src/app/features/dried/pages/output/output.page.html
+++ b/src/app/features/dried/pages/output/output.page.html
@@ -23,10 +23,10 @@
     <ion-row class="row-button">
       <ion-button (click)="form.onSubmit()" [disabled]="form.form.invalid">
         <ion-grid>
-          <ion-col>
+          <ion-col *ngIf="!isLoading">
             Registrar salida
           </ion-col>
-          <ion-spinner *ngIf="false" name="crescent"></ion-spinner>
+          <ion-spinner *ngIf="isLoading" name="crescent"></ion-spinner>
         </ion-grid>
       </ion-button>
     </ion-row>
